# model/params.go
@@ -4,7 +4,7 @@ import "gorm.io/gorm"
 
 type User struct {
 	gorm.Model
-	Name      string `gorm:"type:varchar(20);not null"`
-	Telephone string `gorm:"varchar(11);not null;unique"`
-	Password  string `gorm:"size:255;not null"`
+	Name      string `form:"name" gorm:"type:varchar(20);not null"`
+	Telephone string `form:"telemetry" gorm:"varchar(11);not null;unique"`
+	Password  string `form:"password" gorm:"size:255;not null"`
 }
